--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,13 @@
 			<artifactId>javafx-controls</artifactId>
 			<version>21.0.1</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-fxml</artifactId>
+			<version>21.0.1</version>
+		</dependency>
+		
 	</dependencies>
 
 	<properties>
